work in progress

--- a/source/style/style.css
+++ b/source/style/style.css
@@ -1,21 +1,21 @@
-html,
-body {
-  margin: 0;
+body,
+html {
+  margin: 0
 }
 
 .slider,
-.slider-students-work,
 .slider-feedback,
-.slider-result {
+.slider-result,
+.slider-students-work {
   margin: auto;
   overflow: hidden;
   position: relative;
-  width: 100vw;
+  width: 100vw
 }
 
 .slider-info {
-  font-family: 'El Messiri',Arial,sans-serif;
-  visibility: hidden;
+  font-family: El Messiri, Arial, sans-serif;
+  visibility: hidden
 }
 
 .wrapper {
@@ -25,50 +25,53 @@ body {
   height: 42vw;
   justify-content: flex-start;
   position: relative;
-  transition: transform 0.5s ease-out;
-  width: max-content;
+  transition: transform .5s ease-out;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content
 }
 
 .slider__slide,
 .slider__slide_elongated {
   align-self: flex-start;
-  border-radius: 0.25em;
+  border-radius: .25em;
   display: inline;
   margin: 1.4vw;
   transform-origin: center top;
-  transition: all 0.5s ease-out;
-  width: 19vw;
+  transition: all .5s ease-out;
+  width: 19vw
 }
 
 .slider__slide_elongated {
-  margin: unset;
+  margin: unset
 }
 
 .slider__slide_tall {
   height: 31vw;
   width: unset;
+  cursor: pointer;
 }
 
 .slider__header {
   display: flex;
-  align-items: center;
+  align-items: center
 }
 
 .slider__avatart {
-  width: 2vw;
-  margin: 0 1vw 1vw 1vw;
+  width: 2.5vw;
+  margin: 0 0.8vw 0.5vw;
 }
 
 .slider__title-name {
-  font-family: 'El Messiri',Arial,sans-serif;
+  font-family: El Messiri, Arial, sans-serif;
   height: 2vw;
-  font-size: 0.9em;
+  font-size: .9em
 }
 
 .active,
 .active2 {
   margin: 1.4vw 11vw;
-  transform: scale(2);
+  transform: scale(2)
 }
 
 .navigation,
@@ -81,16 +84,16 @@ body {
   position: absolute;
   top: 0;
   transform: translate(35%, 28vw);
-  width: 60vw;
+  width: 60vw
 }
 
 .navigation2 {
-  transform: translate(35%, 22vw);
+  transform: translate(35%, 22vw)
 }
 
 .navigation3 {
   transform: translate(30%, 36vw);
-  width: 64vw;
+  width: 64vw
 }
 
 .btn-wrapper {
@@ -98,260 +101,248 @@ body {
   display: flex;
   flex-direction: column;
   height: 25px;
-  justify-content: center;
+  justify-content: center
 }
 
-.btn-right,
-.btn-left {
-  width: 6vw;
-  border: 0;
-  background: center/contain no-repeat;
-}
-
-.btn-left {
-  background-image: url(/img/arrow-left.svg);
-}
-
+.btn-left,
 .btn-right {
-  background-image: url(/img/arrow-right.svg);
+  width: 6vw
 }
 
 .slide__title {
   display: flex;
   margin-bottom: 1em;
+  transform: translateX(-15px)
 }
 
 .slide__number {
-  align-self: flex-start;
-  font-family: El Messiri,Arial,sans-serif;
-  font-size: 64px;
+  font-family: El Messiri, Arial, sans-serif;
+  font-size: 65px;
   font-weight: 400;
   margin: 0;
-  width: 2.5em;
-  line-height: 1;
+  width: .9em;
   display: flex;
-  justify-content: center;
+  justify-content: center
+}
+
+.slide__number,
+.slide__title-value {
+  align-self: flex-start;
+  line-height: 1
 }
 
 .slide__title-value {
-  align-self: flex-start;
-  font-family: Alegreya Sans,Arial,sans-serif;
-  font-size: 18px;
-  font-weight: lighter;
-  line-height: 1;
-  width: 200vw;
+  font-family: Alegreya Sans, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  width: 72vw;
   word-break: break-word;
+  line-height: 1.28;
+  margin-right: 2em;
+  transform: translateX(-4px)
 }
 
 .slide__title-value_small {
-  font-size: 14px;
+  font-size: 16px
 }
 
 .slide__image {
   width: 92vw;
-  border-radius: .25em;
+  border-radius: .25em
 }
 
-@media (min-width: 1800px) {
+.slide__image_bottom {
+  position: absolute;
+  bottom: 0
+}
+
+@media (min-width:1800px) {
   .wrapper {
-    height: 700px;
+    height: 700px
   }
-
   .slider__slide_tall {
-    height: 17.7vw;
+    height: 17.7vw
   }
-
   .active,
   .active2,
   .active3 {
     margin: 1.4vw;
-    transform: scale(1);
+    transform: scale(1)
   }
-
   .navigation {
-    transform: translate(35%, 22vw);
+    transform: translate(35%, 22vw)
   }
-
   .navigation2 {
-    transform: translate(35%, 16vw);
+    transform: translate(35%, 16vw)
   }
-
   .navigation3 {
-    transform: translate(30%, 22vw);
+    transform: translate(30%, 22vw)
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width:768px) {
   .slider,
-  .slider-students-work,
   .slider-feedback,
-  .slider-result {
-    width: 96vw;
+  .slider-result,
+  .slider-students-work {
+    width: 95vw
   }
-
   .wrapper {
-    height: 60vw;
+    height: 60vw
   }
-
   .wrapper-feedback {
-    height: 65vw;
+    height: 65vw
   }
-
   .slider__slide,
   .slider__slide_elongated {
     margin: 2vw 1.5vw;
     width: 45vw;
-    height: 45vw;
+    height: 45vw
   }
-
   .slider__slide_elongated,
   .slider__slide_tall {
-    height: unset;
+    height: unset
   }
-
   .slider__slide_elongated {
-    margin: unset;
+    margin: unset
   }
-
   .slider__avatart {
-    width: 6vw;
+    width: 6vw
   }
-
   .active,
   .active2,
   .active3 {
     margin: 2vw 1.5vw;
-    transform: scale(1);
+    transform: scale(1)
   }
-
   .navigation,
   .navigation2,
   .navigation3,
   .navigation4 {
     align-items: baseline;
     transform: translate(1.5vw, 53vw);
-    width: 92vw;
+    width: 92vw
   }
-
   .navigation2 {
-    transform: translate(1.5vw, 42vw);
+    transform: translate(1.5vw, 42vw)
   }
-
   .navigation3 {
-    transform: translate(1.5vw, 62vw);
+    transform: translate(1.5vw, 62vw)
   }
-
-  .btn-right,
-  .btn-left {
-    width: 12vw;
+  .btn-left,
+  .btn-right {
+    width: 12vw
   }
-
   .slider-info {
     font-size: 18px;
-    visibility: visible;
+    visibility: visible
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width:425px) {
   .slider,
-  .slider-students-work,
   .slider-feedback,
-  .slider-result {
+  .slider-result,
+  .slider-students-work {
     height: 115vw;
-    width: 100vw;
+    width: 100vw
   }
-
   .slider-feedback,
   .slider-result {
-    height: 130vw;
+    height: 130vw
   }
-
   .wrapper {
-    height: 80vw;
+    height: 80vw
   }
-
+  .wrapper_text-slider {
+    height: 97vw
+  }
   .slider__slide,
   .slider__slide_elongated {
     height: unset;
     margin: 5vw;
-    width: 90vw;
+    width: 90vw
   }
-
   .slider__slide_elongated {
-    margin: unset;
+    margin: unset
   }
-
   .slider__avatart {
-    width: 12vw;
+    width: 16vw
   }
-
+  .slider__header {
+    margin-bottom: 1em;
+  }
   .active,
   .active2,
   .active3 {
     margin: 5vw;
-    transform: scale(1);
+    transform: scale(1)
   }
-
   .navigation,
   .navigation2,
   .navigation3,
   .navigation4 {
     align-items: baseline;
     transform: translate(7%, 100vw);
-    width: 88vw;
+    width: 88vw
   }
-
   .navigation2 {
-    transform: translate(7%, 80vw);
+    transform: translate(7%, 90vw)
   }
-
   .navigation3 {
-    transform: translate(7%, 124vw);
+    transform: translate(7%, 124vw)
+  }
+  .btn-left,
+  .btn-right {
+    width: 20vw
   }
 
-  .btn-right,
-  .btn-left {
-    width: 20vw;
+  .slider__title-name {
+    font-size: 1.1em;
+    transform: translate(1em, -0.5em);
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width:375px) {
   .slider {
-    height: 115vw;
+    height: 115vw
   }
-
   .wrapper {
-    height: 100vw;
+    height: 100vw
   }
-
+  .wrapper_text-slider {
+    height: 106vw
+  }
   .slider__slide,
   .slider__slide_elongated {
     margin: 4vw;
-    width: 92vw;
+    width: 92vw
   }
-
   .slider__slide_elongated {
-    margin: unset;
+    margin: unset
   }
-
   .active,
   .active2,
   .active3 {
     margin: 4vw;
-    transform: scale(1);
+    transform: scale(1)
   }
-
   .navigation {
-    transform: translate(7%, 102vw);
+    transform: translate(7%, 106vw)
   }
-
   .navigation4 {
-    transform: translate(7%, 112vw);
+    transform: translate(7%, 112vw)
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width:320px) {
+  .wrapper_text-slider {
+    height: 115vw
+  }
   .navigation2 {
-    transform: translate(7%, 82vw);
+    transform: translate(7%, 88vw)
+  }
+  .navigation4 {
+    transform: translate(7%, 122vw)
   }
 }
