--- a/source/template/slider-feedback.html
+++ b/source/template/slider-feedback.html
@@ -4,7 +4,6 @@
     <img class="slider__slide slider__slide_tall active3" src="https://design-school.taa-dev.pro/slider-feedback/2.jpg">
     <img class="slider__slide slider__slide_tall" src="https://design-school.taa-dev.pro/slider-feedback/3.jpg">
     <img class="slider__slide slider__slide_tall" src="https://design-school.taa-dev.pro/slider-feedback/4.jpg">
-
     <img class="slider__slide slider__slide_tall" src="https://design-school.taa-dev.pro/slider-feedback/5.jpg">
     <img class="slider__slide slider__slide_tall" src="https://design-school.taa-dev.pro/slider-feedback/6.jpg">
     <img class="slider__slide slider__slide_tall" src="https://design-school.taa-dev.pro/slider-feedback/7.jpg">
@@ -35,4 +34,8 @@
       <img class="btn-right" src="https://design-school.taa-dev.pro/arrow-right.svg" alt="">
     </div>
   </div>
+</div>
+
+<div id="pop-up-window">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/1.jpg" alt="">
 </div>
