--- a/source/template/slider-students-work.html
+++ b/source/template/slider-students-work.html
@@ -3,7 +3,7 @@
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-1.png" alt="">
           <div class="slider__title-name">ЮЛИЯ УСАНИНА</div>
         </div>
         <a href="https://drive.google.com/file/d/1o1SRbUgMwHfi1Eblkpiw583_CU386Ph7/view?usp=sharing" target="_blank">
@@ -13,7 +13,7 @@
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-2.png" alt="">
           <div class="slider__title-name">ТАТЬЯНА ШМЫКОВА</div>
         </div>
         <a href="https://drive.google.com/file/d/1DYRhLapmvG8xKAdoNRRNljz1J9_e-0o6/view?usp=sharing" target="_blank">
@@ -23,7 +23,7 @@
 
       <div class="slider__slide active2">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-3.png" alt="">
           <div class="slider__title-name">ОКСАНА КЛЮЧКО</div>
         </div>
         <a href="https://drive.google.com/file/d/1L97XHch-dZCNjk6IOlsFf4L79gYog5DG/view?usp=sharing" target="_blank">
@@ -33,11 +33,11 @@
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-4.png" alt="">
           <div class="slider__title-name">ЛЮДМИЛА ШВЕЦ</div>
         </div>
         <a href="https://drive.google.com/file/d/1y9x0KVcVfLx-8SaAWK2CHufVCQMYiNpe/view?usp=sharing" target="_blank">
-          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/5.png">
+          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/4.png">
         </a>
       </div>
 
@@ -47,47 +47,47 @@
           <div class="slider__title-name">ЛИЛИЯ КОРНИЛОВА</div>
         </div>
         <a href="https://drive.google.com/file/d/1pdgON6RBjlBWta2-J_sruOquRCtLfF4D/view?usp=sharing" target="_blank">
+          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/5.png">
+        </a>
+      </div>
+
+      <div class="slider__slide">
+        <div class="slider__header">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-6.png" alt="">
+          <div class="slider__title-name">АННА КУЗНЕЦОВА</div>
+        </div>
+        <a href="https://drive.google.com/file/d/1BwJ_lqC_deINqhqEaz3Eu-HwwkrwMaui/view?usp=sharing" target="_blank">
+         <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/6.png">
+       </a>
+      </div>
+
+      <div class="slider__slide">
+        <div class="slider__header">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-7.png" alt="">
+          <div class="slider__title-name">ДИАНА НИКИШИНА</div>
+        </div>
+        <a href="https://drive.google.com/file/d/1thrFi77reNrSlbz_jkMA5cbHJNUwneDW/view?usp=sharing" target="_blank">
           <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/7.png">
         </a>
       </div>
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
-          <div class="slider__title-name">АННА КУЗНЕЦОВА</div>
-        </div>
-        <a href="https://drive.google.com/file/d/1BwJ_lqC_deINqhqEaz3Eu-HwwkrwMaui/view?usp=sharing" target="_blank">
-         <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/10.png">
-       </a>
-      </div>
-
-      <div class="slider__slide">
-        <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
-          <div class="slider__title-name">ДИАНА НИКИШИНА</div>
-        </div>
-        <a href="https://drive.google.com/file/d/1thrFi77reNrSlbz_jkMA5cbHJNUwneDW/view?usp=sharing" target="_blank">
-          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/11.png">
-        </a>
-      </div>
-
-      <div class="slider__slide">
-        <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-8.png" alt="">
           <div class="slider__title-name">ОЛЬГА ПЯТНИЦКАЯ</div>
         </div>
         <a href="https://drive.google.com/file/d/1eSZ0ztMGMVqyp-DfFHXFJp1ZOk-QD26p/view?usp=sharing" target="_blank">
-          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/12.png">
+          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/8.png">
         </a>
       </div>
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-9.png" alt="">
           <div class="slider__title-name">ЕКАТЕРИНА МАКАРОВА</div>
         </div>
         <a href="https://drive.google.com/file/d/1QiAIMNQuyvzUyPg7_5iTpvM8pj6QlaDU/view?usp=sharing" target="_blank">
-          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/14.png">
+          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/9.png">
         </a>
       </div>
 
@@ -97,47 +97,47 @@
           <div class="slider__title-name">ОГАНЕСЯН НАРИНЭ</div>
         </div>
         <a href="https://drive.google.com/file/d/1C2n8zy97rFNYPRxGlS0hbltU6oKJSz5G/view?usp=sharing" target="_blank">
-         <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/16.png">
+         <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/10.png">
        </a>
       </div>
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-11.png" alt="">
           <div class="slider__title-name">ДИНА БОБОЕД</div>
         </div>
         <a href="https://drive.google.com/file/d/1UOVxDqQexsaUmLy1jTkpTLIpxZjMXKAZ/view?usp=sharing" target="_blank">
-          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/17.png">
+          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/11.png">
        </a>
       </div>
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-12.png" alt="">
           <div class="slider__title-name">ЛЮДМИЛА ПОЗДЯЕВА</div>
         </div>
         <a href="https://drive.google.com/file/d/1vbqcMbSpmeMK_6NSatawuKPCyN3c6amp/view?usp=sharing" target="_blank">
-          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/18.png">
+          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/12.png">
         </a>
       </div>
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-13.png" alt="">
           <div class="slider__title-name">ЕЛИЗАВЕТА МЫЛЬЦЕВА</div>
         </div>
         <a href="https://drive.google.com/file/d/1kyC_9TdqUvkOsmV20osRRbPp3WzahEl7/view?usp=sharing" target="_blank">
-          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/19.png">
+          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/13.png">
         </a>
       </div>
 
       <div class="slider__slide">
         <div class="slider__header">
-          <img class="slider__avatart" src="https://design-school.taa-dev.pro/slider-students-work/avatar.png" alt="">
+          <img class="slider__avatart" src="https://design-school.taa-dev.pro/avatar-photo/ava-14.png" alt="">
           <div class="slider__title-name">ЕКАТЕРИНА ЗАГОРОДСКАЯ</div>
         </div>
         <a href="https://drive.google.com/file/d/17OIdpRjTVYVoTBk351THVkOm24j7Hq2S/view?usp=sharing" target="_blank">
-          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/20.png">
+          <img class="slider__slide_elongated" src="https://design-school.taa-dev.pro/slider-students-work/14.png">
         </a>
       </div>
 
