--- a/source/template/slider.html
+++ b/source/template/slider.html
@@ -1,4 +1,4 @@
-<div id="my-slider" class="slider">
+<div class="slider">
     <div class="wrapper">
       <img class="slider__slide" src="https://design-school.taa-dev.pro/slider-works/1.jpg">
       <img class="slider__slide" src="https://design-school.taa-dev.pro/slider-works/2.jpg">
@@ -17,8 +17,13 @@
     </div>
 
     <div class="navigation">
-        <input type="button" class="btn-left">
-      <div class="slider-info"></div>
-        <input type="button" class="btn-right">
+      <div class="btn-wrapper btn-wrapper_left">
+        <img class="btn-left" src="https://design-school.taa-dev.pro/arrow-left.svg" alt="">
+      </div>
+      <div class="slider-info">1/6</div>
+      <div class="btn-wrapper btn-wrapper_right">
+        <img class="btn-right" src="https://design-school.taa-dev.pro/arrow-right.svg" alt="">
+      </div>
     </div>
-  </div>
+
+</div>
