--- a/source/template/slider-feedback.html
+++ b/source/template/slider-feedback.html
@@ -37,5 +37,31 @@
 </div>
 
 <div id="pop-up-window">
+    <div class="pop-up_to-left"></div>
     <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/1.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/2.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/3.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/4.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/5.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/6.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/7.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/8.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/9.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/10.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/11.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/12.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/13.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/14.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/15.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/16.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/17.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/18.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/19.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/20.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/21.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/22.jpg" alt="">
+    <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/23.jpg" alt="">
+    <div class="pop-up_to-right">
+        <img src="https://img2.freepng.ru/20180530/lej/kisspng-sulapac-oy-slider-computer-icons-transport-logistic-5b0e29f6cf8ef2.5726827615276549028502.jpg" alt="">
+    </div>
 </div>
