--- a/source/style/pop-up-window.css
+++ b/source/style/pop-up-window.css
@@ -2,18 +2,32 @@
   position: absolute;
   border-radius: 8px;
   box-shadow: 0px 8px 16px rgb(0 0 0 / 40%);
-  /*height: 95vh;*/
-  width: 95vw;
-  top: 0;
-  left: 2.5vw;
-  background: rgba(0,0,0,.5);
+  height: auto;
+  width: 80vw;
+  top: 5vh;
+  left: 10vw;
+  background: rgba(51, 51, 51, 0.7);
   display: flex;
+  visibility: hidden;
   justify-content: center;
-  /*align-items: center;*/
-  margin: 1em 0;
+  margin: auto 0;
+  overflow: auto;
+  display: flex;
 }
 
 .pop-up-window__image {
-  width: 50%;
+  width: 40%;
   height: fit-content;
+  margin: auto;
+  display: none;
+}
+
+.pop-up-window__image_active {
+  display: block;
+}
+
+.pop-up_to-left,
+.pop-up_to-right {
+  height: auto;
+  width: 100%;
 }
