--- a/source/style/pop-up-window.css
+++ b/source/style/pop-up-window.css
@@ -3,11 +3,10 @@
   border-radius: 8px;
   box-shadow: 0px 8px 16px rgb(0 0 0 / 40%);
   height: auto;
-  width: 80vw;
-  top: 5vh;
-  left: 10vw;
+  width: 100%;
+  top: 0;
+  left: 0;
   background: rgba(51, 51, 51, 0.7);
-  display: flex;
   visibility: hidden;
   justify-content: center;
   margin: auto 0;
@@ -16,10 +15,11 @@
 }
 
 .pop-up-window__image {
-  width: 40%;
+  width: auto;
   height: fit-content;
   margin: auto;
   display: none;
+  max-height: 100vh;
 }
 
 .pop-up-window__image_active {
@@ -30,4 +30,57 @@
 .pop-up_to-right {
   height: auto;
   width: 100%;
+  background: transparent url(https://design-school.taa-dev.pro/arrow-popup.png) no-repeat center center/7em;
+  border-color: transparent;
+}
+
+.pop-up_to-left {
+  transform: scale(-1, 1);
+}
+
+.close-btn {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  height: 3em;
+  width: 3em;
+  background: url('https://static.tildacdn.com/tild6661-6436-4565-a234-326164306263/close-btn.svg') 100%/cover;
+  visibility: hidden;
+}
+
+#rec305615005 .t396__artboard {
+  z-index: 2 !important;
+}
+
+#rec304785923 .tn-elem[data-elem-id="1470209944682"] {
+  z-index: 0 !important;
+}
+
+@media (max-width: 768px) {
+  .pop-up_to-left,
+  .pop-up_to-right {
+    display: none;
+  }
+
+  #pop-up-window {
+    overflow: hidden;
+  }
+}
+
+@media (max-width: 425px) {
+  #pop-up-window {
+    width: 100vw;
+    left: 0;
+    align-items: flex-start;
+    border-radius: 0;
+  }
+
+  .pop-up-window__image {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .close-btn {
+    visibility: visible;
+  }
 }
