--- a/source/template/slider-feedback.html
+++ b/source/template/slider-feedback.html
@@ -29,7 +29,7 @@
     <div class="btn-wrapper btn-wrapper_left">
       <img class="btn-left" src="https://design-school.taa-dev.pro/arrow-left.svg" alt="">
     </div>
-    <div class="slider-info">1/6</div>
+    <div class="slider-info"></div>
     <div class="btn-wrapper btn-wrapper_right">
       <img class="btn-right" src="https://design-school.taa-dev.pro/arrow-right.svg" alt="">
     </div>
@@ -37,7 +37,8 @@
 </div>
 
 <div id="pop-up-window">
-    <div class="pop-up_to-left"></div>
+    <div class="close-btn"></div>
+    <input type="button" class="pop-up_to-left">
     <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/1.jpg" alt="">
     <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/2.jpg" alt="">
     <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/3.jpg" alt="">
@@ -61,7 +62,5 @@
     <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/21.jpg" alt="">
     <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/22.jpg" alt="">
     <img class="pop-up-window__image" src="https://design-school.taa-dev.pro/slider-feedback/feedback-origin/23.jpg" alt="">
-    <div class="pop-up_to-right">
-        <img src="https://img2.freepng.ru/20180530/lej/kisspng-sulapac-oy-slider-computer-icons-transport-logistic-5b0e29f6cf8ef2.5726827615276549028502.jpg" alt="">
-    </div>
+    <input type="button" class="pop-up_to-right">
 </div>
