html file dropped to components

--- a/source/template/slider.html
+++ b/source/template/slider.html
@@ -1,3 +1,3 @@
-<div id="galleryft-slider-video-games">
-  galleryft video-games
-</div>
+<h2>galleryft video-games</h2>
+
+//=./galleryft-slider/galleryft-slider.html
