--- a/source/template/galleryft-slider/slides/slides.html
+++ b/source/template/galleryft-slider/slides/slides.html
@@ -6,7 +6,7 @@
   <img class="galleryft-slider__image" src="./img/video-games/2.jpg" alt="">
 </div>
 
-<div class="galleryft-slider__slide">
+<div class="galleryft-slider__slide galleryft-slider__slide_active">
   <img class="galleryft-slider__image" src="./img/video-games/3.jpg" alt="">
 </div>
 
