--- a/source/style/2.slider-style.css
+++ b/source/style/2.slider-style.css
@@ -1,10 +1,13 @@
 .galleryft-slider {
   overflow: hidden;
   width: 100vw;
+  height: 34vw;
+  position: relative;
 }
 
 .galleryft-slider__wrapper {
   display: flex;
   transition: transform .5s ease-out;
   width: max-content;
+  transform: translateX(-6.5vw);
 }
