--- a/source/template/galleryft-slider/galleryft-slider.html
+++ b/source/template/galleryft-slider/galleryft-slider.html
@@ -1,4 +1,4 @@
-<div id="galleryft-slider-video-games" class="galleryft-slider">
+<div id="slider-video-games" class="galleryft-slider">
   <div class="galleryft-slider__wrapper">
     //=./slides/slides.html
   </div>
