changed active slide to direction

--- a/source/template/galleryft-slider/navigation/navigation.html
+++ b/source/template/galleryft-slider/navigation/navigation.html
@@ -1,4 +1,7 @@
 <div class="galleryft-slider__navigation">
-  <input type="button" class="galleryft-slider__navigation-button galleryft-slider__navigation-button_left">
-  <input type="button" class="galleryft-slider__navigation-button galleryft-slider__navigation-button_right">
+
+  <input type="button" data-direction="left" class="galleryft-slider__navigation-button galleryft-slider__navigation-button_left">
+
+  <input type="button" data-direction="right" class="galleryft-slider__navigation-button galleryft-slider__navigation-button_right">
+
 </div>
