--- a/source/template/galleryft-slider/slides/slides.html
+++ b/source/template/galleryft-slider/slides/slides.html
@@ -1,27 +1,27 @@
-<div class="galleryft-slider__slide">
+<div data-type="slide" class="galleryft-slider__slide">
   <img class="galleryft-slider__image" src="./img/video-games/1.jpg" alt="">
 </div>
 
-<div class="galleryft-slider__slide">
+<div data-type="slide" class="galleryft-slider__slide">
   <img class="galleryft-slider__image" src="./img/video-games/2.jpg" alt="">
 </div>
 
-<div class="galleryft-slider__slide galleryft-slider__slide_active">
+<div data-type="slide" class="galleryft-slider__slide galleryft-slider__slide_active">
   <img class="galleryft-slider__image" src="./img/video-games/3.jpg" alt="">
 </div>
 
-<div class="galleryft-slider__slide">
+<div data-type="slide" class="galleryft-slider__slide">
   <img class="galleryft-slider__image" src="./img/video-games/4.jpg" alt="">
 </div>
 
-<div class="galleryft-slider__slide">
+<div data-type="slide" class="galleryft-slider__slide">
   <img class="galleryft-slider__image" src="./img/video-games/5.jpg" alt="">
 </div>
 
-<div class="galleryft-slider__slide">
+<div data-type="slide" class="galleryft-slider__slide">
   <img class="galleryft-slider__image" src="./img/video-games/6.jpg" alt="">
 </div>
 
-<div class="galleryft-slider__slide">
+<div data-type="slide" class="galleryft-slider__slide">
   <img class="galleryft-slider__image" src="./img/video-games/7.jpg" alt="">
 </div>
