added prohibition to double tap for mobile device and added full-content viewport for iphone

--- a/source/style/1.reset-body.css
+++ b/source/style/1.reset-body.css
@@ -2,3 +2,9 @@ html,
 body {
   margin: 0;
 }
+
+h2 {
+  padding: 12px;
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+}
