added demo slider

--- a/source/style/1.reset-body.css
+++ b/source/style/1.reset-body.css
@@ -4,6 +4,7 @@ body {
 }
 
 h2 {
+  text-align: center;
   padding: 12px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
