--- a/source/template/galleryft-slider/galleryft-slider-video-games.html
+++ b/source/template/galleryft-slider/galleryft-slider-video-games.html
@@ -1,6 +1,8 @@
+<h2>Galleryft-slider video-games</h2>
+
 <div id="slider-video-games" class="galleryft-slider">
   <div class="galleryft-slider__wrapper">
-    //=./slides/slides.html
+    //=./slides/slides-video-games.html
   </div>
   //=./navigation/navigation.html
 </div>
