--- a/source/style/2.slider-style.css
+++ b/source/style/2.slider-style.css
@@ -8,7 +8,7 @@
 
 .galleryft-slider__wrapper {
   display: flex;
-  transition: transform .5s ease-out, width .5s ease-out;
+  transition: transform .5s ease-out;
   width: max-content;
   transform: translate3d(-7.5vw, 0, 0);
 }
